Fix poll option overflow bug using flex-box for formating

--- a/public/src/stylesheets/sass/components/_option-list.scss
+++ b/public/src/stylesheets/sass/components/_option-list.scss
@@ -1,4 +1,4 @@
-$option-height: 7rem;
+$option-height: 6rem;
 
 .OptionList {
     display: block;        
@@ -9,9 +9,9 @@ $option-height: 7rem;
  
     &__option {        
         position: relative;
-        display: block;
+        // display: block;
         width: 100%;
-        height: $option-height;        
+        min-height: $option-height;        
         padding: .5rem 1rem;
         line-height: 2;
         border: 2px solid $color-black;
@@ -29,89 +29,81 @@ $option-height: 7rem;
             @include select;          
         }
 
+        > label {
+            display: flex;
+            flex-wrap: nowrap;
+            justify-content: space-between;
+            align-items: center;
+        }
+
         &-id {
             display: none;
         }
 
         &-select,
         &-name,
-        &-count,
-        &-percent,
-        &-new {            
-            height: $option-height;
-            // padding: 1rem;
-        }
-
-        &-name,
         &-new,
         &-count,
         &-percent,
         &-input {
+            position: relative;
+            font-family: $font-primary;
+            min-height: $option-height;            
             font-size: $option-height / 3;
             font-family: $font-primary;
             font-weight: 500;
-            letter-spacing: 2px;
-            line-height: $option-height / 2;
+            letter-spacing: 1px;
             color: $text-dark;            
             padding: 1rem;
+            // @include outline;                   
         }
 
-        &-select {
-            @include inline-block-compressed;
-            position: relative;
-            width: 10%;
-            // height: 100%;
-            // top: -1.7rem;                    
-            // @include select;            
+        &-select,
+        &-name,
+        &new {
+            margin-right: auto;
+        }
 
+        &-select {            
+            flex: 0 0 10%;
+            position: relative;
+            
             &::before {
                 position: absolute;
-                top: 15%;
+                top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);                
                 content: "";
-                width: $option-height / 2;//2.4rem;
-                height: $option-height / 2;//2.6rem;
-                border: 3px solid $color-tertiary;
-                // border-radius: 100%;
+                width: $option-height / 2;
+                height: $option-height / 2;
+                border: 3px solid $color-tertiary;            
             }
 
             &::after {
-                opacity: 0;
-                position: absolute;
-                top: $option-height/10;
+                position: absolute;                                
+                top: 50%;
                 left: 50%;
-                transform: translateX(-50%) rotate(-45deg);                
+                transform: translate(-50%, -50%) rotate(-45deg);                
                 background-color: $color-tertiary;
                 content: "";
                 width: $option-height / 1.5;
-                height: 4px;                
-                font-size: 3.2rem;                                
+                height: 4px;                                
+                opacity: 0;
                 transition: opacity .6s ease;
             }
         }
+        
+        &-name {
+            flex: 0 0 75%;
+        }
 
-        &-name,
         &-new {
-            @include inline-block-compressed;
-            position: relative;            
-            width: 75%;           
-            // height: 100%;
-            // font-size: 2rem;            
-            // padding: 1rem;
-            font-family: $font-primary;
-            // @include select;            
+            flex: 0 0 90%;
         }
 
         &-count,
         &-percent {            
-            position: relative;                      
-            width: 15%;
-            // height: 100%;
-            // font-size: 2rem;            
-            // padding: 1rem;
-            text-align: center;
-            font-family: $font-copy;
+            text-align: center;            
         }
 
         &-count {
@@ -120,8 +112,8 @@ $option-height: 7rem;
             opacity: 0;
         }
         
-        &-percent {
-            @include inline-block-compressed;
+        &-percent {            
+            flex: 0 0 15%;
             z-index: 10;
         }
 
@@ -139,13 +131,12 @@ $option-height: 7rem;
         }
 
         &-input {
+            font-family: inherit;
             position: absolute;
             left: 12%;
             top: 0;
             width: 88%;
             height: 100%;
-            // font-family: $font-copy;
-            // font-size: 2rem;
             padding-left: 1rem;
             background-color: $color-primary;
             z-index: -1;
